--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fanpage TEMPEST</title>
+    <title>V-iE VOTING TEAM</title>
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -14,7 +14,7 @@
         }
 
         header {
-            background-color: #4a90e2;
+            background-color: #9B4D96;
             color: white;
             text-align: center;
             padding: 1.5rem 0;
@@ -65,25 +65,182 @@
         }
     </style>
 </head>
+
+<head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css/css/flag-icon.min.css">
+</head>
+
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+</head>
+
 <body>
     <header>
         <h1>Welcome to V-iE Voting Team!</h1>
+        <p>Đây là nơi cập nhật thông tin mới nhất về các bảng vote của TEMPEST!</p>
         <nav>
-            <a href="#home">Trang chính</a>
-            <a href="#announcements">Thông báo</a>
+            <a href="#home">Các bảng vote (Open)</a>
+            <a href="#announcements">Apps vote</a>
             <a href="#socials">Liên kết</a>
         </nav>
     </header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Background Image</title>
+  <style>
+    body {
+      /* Đường dẫn đến hình ảnh */
+      background-image: url('It’s me, It’s V-iE Voting Team.png'); 
+      
+      /* Tùy chỉnh cách hiển thị hình ảnh */
+      background-size: 1000px 700px; /* Kích thước cụ thể */
+      background-repeat: no-repeat; /* Không lặp lại hình ảnh */
+      background-position: center; /* Căn giữa hình ảnh */
+    }
+  </style>
+</html>
+
+
     <section id="home">
-        <h2>Chào mừng iE!</h2>
-        <p>Đây là nơi cập nhật thông tin mới nhất về các bảng vote của TEMPEST!</p>
-    </section>
-    <section id="announcements">
-        <h2>Thông báo</h2>
+	        <h2>Các bảng vote (Open)</h2>
         <ul>
             <li><strong>Concert:</strong> TEMPEST COMEBACK 6TH XX/YY/2025!</li>
             <li><strong>Album:</strong> Phát hành ngày XX/YY/2025.</li>
         </ul>
+
+    </section>
+    <section id="announcements">
+
+<ul>
+	<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f4f4f9;
+      margin: 0;
+      padding: 20px;
+    }
+
+    /* Tiêu đề chính nằm ở giữa */
+    h2 {
+      text-align: center;
+      color: #4CAF50;
+      font-size: 24px;
+      margin-bottom: 30px;
+    }
+
+    /* Kiểu dáng cho các nút Accordion */
+    .accordion {
+      background-color: #fff;
+      border: 1px solid #ddd;
+      padding: 15px;
+      cursor: pointer;
+      width: 100%;
+      text-align: center;  /* Đặt tiêu đề nằm giữa */
+      font-size: 18px;
+      outline: none;
+      font-weight: bold; /* In đậm */
+      border-radius: 5px;
+      margin-bottom: 10px;
+      transition: all 0.3s ease;
+    }
+
+    /* Đổi màu chữ và số thứ tự khi di chuột vào */
+    .accordion:hover {
+      background-color: #fff;
+      color: #F1A7C6; /* Đổi màu chữ khi hover */
+    }
+
+    /* Đánh số thứ tự cho mỗi section (màu đen và in đậm) */
+    .accordion::before {
+      content: attr(data-order) ". ";
+      color: #000; /* Màu đen */
+      font-weight: bold; /* In đậm */
+    }
+
+    /* Các phần nội dung */
+    .panel {
+      padding: 0 18px;
+      display: none;
+      background-color: #f1f1f1;
+      border-left: 3px solid #F1A7C6;
+      border-radius: 0 0 5px 5px;
+      margin-bottom: 10px;
+      box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Mở rộng hiệu ứng */
+    .panel p {
+      padding: 15px;
+      font-size: 16px;
+      color: #333;
+    }
+
+    /* Cập nhật trạng thái mở rộng */
+    .accordion.active {
+      background-color: #4B5320;
+      color: #F1A7C6;
+    }
+
+    /* Thay đổi màu sắc số thứ tự và tiêu đề khi hover */
+    .accordion.active::before {
+      color: white; /* Màu trắng cho số thứ tự khi mở rộng */
+    }
+  </style>
+  <title>CÁC APP VOTE</title>
+</head>
+<body>
+
+<h2>CÁC APP VOTE</h2>
+
+<!-- Các section accordion với số thứ tự -->
+<button class="accordion" data-order="1">Idol Champ</button>
+<div class="panel">
+	<p>Tim <i class="fas fa-heart" style="color: blue;"></i> sẽ reset vào ngày cuối cùng của tháng, trước 22h 
+  	<!-- Cờ Việt Nam -->
+  	<span class="flag-icon flag-icon-vn"></span></p>
+	<p>Tim <i class="fas fa-heart" style="color: red;"></i> có thời hạn sử dụng VĨNH VIỄN.</p>
+	<p></p>
+
+  <a href="https://www.facebook.com/share/p/15rds4Qjug/" target="_blank">Hướng dẫn tải và tích Chamsim trên Idol Champ</a>
+</div>
+
+<button class="accordion" data-order="2">All Chart</button>
+<div class="panel">
+  <p>Tim <i class="fas fa-heart" style="color: red;"></i> có thời hạn sử dụng 90 ngày.</p>
+</div>
+
+<button class="accordion" data-order="3">Star Planet</button>
+<div class="panel">
+  <p>This is the content for section 3. You can add more information here as needed.</p>
+</div>
+
+<script>
+  var acc = document.getElementsByClassName("accordion");
+  for (var i = 0; i < acc.length; i++) {
+    acc[i].addEventListener("click", function() {
+      this.classList.toggle("active");
+      var panel = this.nextElementSibling;
+      if (panel.style.display === "block") {
+        panel.style.display = "none";
+      } else {
+        panel.style.display = "block";
+      }
+    });
+  }
+</script>
+
+</body>
+</html>
+	</ul>
+
     </section>
     <section id="socials">
         <h2>Liên kết mạng xã hội</h2>
