--- a/index.html
+++ b/index.html
@@ -203,11 +203,19 @@
 <!-- Các section accordion với số thứ tự -->
 <button class="accordion" data-order="1">Idol Champ</button>
 <div class="panel">
-	<p>Tim <i class="fas fa-heart" style="color: blue;"></i> sẽ reset vào ngày cuối cùng của tháng, trước 22h 
-  	<!-- Cờ Việt Nam -->
-  	<span class="flag-icon flag-icon-vn"></span></p>
-	<p>Tim <i class="fas fa-heart" style="color: red;"></i> có thời hạn sử dụng VĨNH VIỄN.</p>
-	<p></p>
+
+ <style>
+    .justify-text {
+      text-align: justify;
+    }
+  </style>
+<p class="justify-text"><strong>1.1. Thời hạn sử dụng Chamsim</strong></p>
+<p class="justify-text">- Tim <i class="fas fa-heart" style="color: blue;"></i> sẽ reset trước 22H00<!-- Cờ Việt Nam --> <span class="flag-icon flag-icon-vn"></span> vào ngày cuối cùng của mỗi tháng.</p>
+<p class="justify-text">- Tim <i class="fas fa-heart" style="color: red;"></i> có thời hạn sử dụng VĨNH VIỄN.
+	</p>
+
+</body>
+	
 
   <a href="https://www.facebook.com/share/p/15rds4Qjug/" target="_blank">Hướng dẫn tải và tích Chamsim trên Idol Champ</a>
 </div>
