--- a/index.html
+++ b/index.html
@@ -135,6 +135,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+@media (max-width: 768px) { 
+            h1 {
+                font-size: 24px; /* Giảm kích thước chữ tiêu đề */
+                text-align: center;
+            }
+            p {
+                font-size: 16px;
+            }
+        }
     body {
       font-family: 'Arial', sans-serif;
       background-color: #f4f4f9;
