--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 <div class="panel">
   <p>This is the content for section 3. You can add more information here as needed.</p>
 </div>
-QQQQQQQQQQQQQQQQQQQQQQQQQQQQQQ
+QQQQQQQ
 
     </section>
     <section id="announcements">
